disable watcher in github actions

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "build": "tsc && vite build",
         "preview": "vite preview",
         "test": "jest --watchAll",
+        "test:build": "jest",
         "prepare": "husky install"
     },
     "browserslist": {
